styles/cart.module.css
.cartBackground {
  position: fixed;
  width: 100%;
  height: 100vh;
  right: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.4);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(6.5px);
  -webkit-backdrop-filter: blur(6.5px);

}

.cart {
  border: none;
  position: fixed;
  display: flex;
  background-color: white;
  flex-direction: column;
  align-items: center;
  padding-top: 70px;
  right: 0;
  width: 500px;
  height: 100vh;
  /* overflow: scroll; */
}

.card {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 350px;
  border-radius: 5px;
  background-color: rgb(225, 225, 225);
  margin-bottom: 20px;
}
.itemInfo {
  width: 40%;
}

.itemInfo h3 {
  font-size: 17px;
}

.itemInfo p {
  font-size: 15px;
}

.quantity {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 80%;
}

.purchase {
  width: 100%;
  background-color: red;
  border: none;
  height: 30px;
  border-radius: 5px;
}

